<resources>
    <string name="app_name">skillSyncApp</string>
    <string name="sign_in">Sign in</string>
    <string name="lets_log_in_title">Lets sign you in.</string>
    <string name="sign_in_description_text">Sign in with your email and password and join us</string>
    <string name="email">Email</string>

    <string name="welcome_title">Welcome to</string>
    <string name="skillSync">SkillSync</string>
    <string name="description_start_page">Discover and join Israeli projects for a taste of cutting-edge innovation and collaborative teamwork.</string>
    <string name="sign_up">Sign up</string>
    <string name="Sign_in">Sign in</string>

    <string name="post_new_project_title">Post a new project</string>
    <string name="post_new_project_text">Add the information about the project that you want to create</string>
    <string name="post">Post</string>
    <string name="project_name_title">Project Title</string>
    <string name="project_description">Project Description</string>
    <string name="project_name_hint">Enter the project name here</string>
    <string name="project_description_hint">Enter the description here</string>
    <string name="project_deadline_title">Set the expected deadline</string>
    <string name="project__availability_title">What is your availability?</string>

    <string name="develop_group">Develop Group</string>
    <string name="collage_of_management">Collage Of Management</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_out">Sign out</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="forget_password_title">Forget Password.</string>
    <string name="instructions_forget_password">Enter your email address to initiate the password recovery process. We\'ll email you password reset instructions.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_sign_in">Back to Sign in</string>

    <string name="sign_up_group_title">Get Started</string>
    <string name="sign_up_group_sub_title">By creating a free account</string>
    <string name="user_email_title">User Email</string>

    <string name="user_name_title">user Name</string>
    <string name="institution_title">Institution</string>
    <string name="student_description_title">Tell us about you</string>
    <string name="team_members_name_title">Enter teams members name</string>
    <string name="company_name_title">Company Name</string>
    <string name="bio_title">Bio</string>

    <string name="blank_error">Cannot be blank</string>
    <string name="email_error">Write a valid email address</string>


    <string name="password">Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Address</string>
    <string name="create_a_free_account">create a free account</string>
    <string name="get_started">Get Started</string>
    <string name="i_m_a_group">Students Group</string>
    <string name="i_m_a_company">Company</string>

    <string name="sign_up_as">Sign up as</string>
    <string name="user_image">User image</string>
    <string name="name">Name</string>
    <string name="image_s_post">image\'s post</string>
    <string name="feed">Feed</string>
    <string name="add_post">Add Post</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="edit_button">edit_button</string>
    <string name="about_us">About Us</string>
    <string name="about_project">About Project</string>
    <string name="edit_project_details">Edit Project Details</string>
    <string name="add_the_information_about_the_project_that_you_want_to_create">Add the information about the project that you want to create</string>
    <string name="edit_post">Update Post</string>
    <string name="project_name">Project Name</string>

    <string name="error_msg">One or more of the credentials you entered are incorrect. Please try again.</string>
    <string name="edit_group_profile_title">Edit User Details</string>
    <string name="group_profile">Update Profile</string>
    
    <string name="edit_company_profile_title">Edit Company Details</string>
    <string name="company_profile">Update Company</string>
    <string name="back">Back</string>
    <string name="log_out">Log Out</string>
    <string name="explore_companies">Explore Companies</string>
</resources>
