<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SignUpCompanyFragment">

    <TextView
        android:id="@+id/new_post_title"
        style="@style/AppTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_up_group_title"
        android:textAppearance="@style/log_in_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_post_sub_title"
        style="@style/AppTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_up_group_sub_title"
        android:textAppearance="@style/sign_in_description"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_post_title" />
    <!--Start Body-->


    <include
        android:id="@+id/company_name_group"
        layout="@layout/custom_input_field_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_post_sub_title" />


    <include
        android:id="@+id/email_group"
        layout="@layout/custom_input_field_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_name_group" />

    <TextView
        android:id="@+id/input_suggestions"
        style="@style/AppTextStyle"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="top"
        android:text="@string/address"
        android:textColor="@color/Dark_Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_group"/>


    <AutoCompleteTextView
        android:id="@+id/companySuggestion"
        style="@style/AppTextStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/input_suggestions" />

    <View
        android:id="@+id/add_edit_text_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/Light_Gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companySuggestion" />
    <TextView
        android:id="@+id/add_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text=""
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_text_line" />

    <include
        android:id="@+id/password_group"
        layout="@layout/custom_input_field_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_error_message" />

    <Button
        android:id="@+id/sign_up_company_btn"
        style="@style/AppTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/submit_form_btn"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAppearance="@style/log_in_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_group" />

</androidx.constraintlayout.widget.ConstraintLayout>
